Fix wrong padding size

--- a/call-congress.css
+++ b/call-congress.css
@@ -272,7 +272,7 @@ button, input {
 input {
   font-size: 16px;
   font-weight: 200;
-  padding: 15px 70px;
+  padding: 15px 60px;
   border: solid 1px #D0D0D0;
   box-shadow: inset 0 5px 4px -4px #E3E3E3;
   background: #FAFAFA;
